--- a/views/search.ejs
+++ b/views/search.ejs
@@ -4,11 +4,6 @@
     <title><%= title %></title>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <form action="/search" method="get">
-      <input type="text" id="seek" name="seek" required>
-      <button type="submit">Search</button>
-    </form>
     <ul>
       <% if (locals.users) {%>
         <% users.forEach(function(user) { %>
@@ -18,8 +13,10 @@
             <button type="submit" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
           </form>
         <% }); %>
-      <% } %>
+      <% } else {%>
+        No matching users found... :(
+      <% } %>  
     </ul>
-    <a href="/create">Create a user</a>
+    <a href="/">Back to home</a>
   </body>
 </html>
