--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -8,15 +8,15 @@
     <%- include('partials/errors.ejs') %>
     <form action="/create" method="POST">
       <label for="firstName">First Name: </label>
-      <input type="text" name="firstName" id="firstName" required />
+      <input type="text" name="firstName" id="firstName" value="<%= locals.user.firstName %>" required />
       <label for="lastName">Last Name: </label>
-      <input type="text" name="lastName" id="lastName" required />
+      <input type="text" name="lastName" id="lastName" value="<%= locals.user.lastName %>" required />
       <label for="email">Email: </label>
-      <input type="email" name="email" id="email" required />
+      <input type="email" name="email" id="email" value="<%= locals.user.email %>" required />
       <label for="age">Age: </label>
-      <input type="number" name="age" id="age" />
+      <input type="number" name="age" id="age" value="<%= locals.user.age %>" />
       <label for="bio">Bio: </label>
-      <textarea name="bio" id="bio"></textarea>
+      <textarea name="bio" id="bio"><%= locals.user.bio %> </textarea>
       <button type="submit">Submit</button>
     </form>
     <a href="/">Back to home</a>
